--- a/ColorSorter.ioc
+++ b/ColorSorter.ioc
@@ -132,7 +132,9 @@ RCC.SYSCLKFreq_VALUE=36000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=36000000
 RCC.USBFreq_Value=36000000
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate,Parity
+USART1.Parity=PARITY_NONE
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
